some banner tweaks

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   background-color: #e5731a;
   min-height: 5vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: top;
   font-size: calc(10px + 2vmin);
