--- a/src/components/SelectExistingProject.css
+++ b/src/components/SelectExistingProject.css
@@ -1,17 +1,23 @@
 header {
   text-align: center;
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 30px;
 }
 
 .button-container {
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
+.project-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  margin-bottom: 1em;
+}
 .project-button {
-  background-color: #4CAF50; /* Green */
+  background-color: #e5731a;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -19,22 +25,23 @@ header {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 10px 0;
+  margin: 10px 0; 
   cursor: pointer;
   border-radius: 8px;
   transition: background-color 0.3s ease;
 }
 
 .project-button:hover {
-  background-color: #45a049;
+  background-color: #e69d66;
 }
 
 .project-button:active {
-  background-color: #3e8e41;
+  background-color: #6a2609;
 }
 
-p {
+.project-button p {
   font-size: 14px;
-  color: #333;
-  margin: 5px 0;
+  color: #fff;
+  margin: 5px 0 0 0;
+  text-align: center;
 }
