--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
     justify-content: top;
     font-size: calc(10px + 2vmin);
     color: white;
+    justify-content: space-between;
   }
   
   .App-body {
